Fix GUI prediction chart data points

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,8 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ArtificialIntelligence
 endorsed.classpath=
 excludes=
+file.reference.jcommon-1.0.23.jar=/home/zachs/Develop/Java/libs/jfreechart-1.0.19/jfreechart-1.0.19/lib/jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=/home/zachs/Develop/Java/libs/jfreechart-1.0.19/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar
 file.reference.json-simple-1.1.1.jar=/home/zachs/Develop/Java/libs/json-simple/json-simple-1.1.1.jar
 includes=**
 jar.compress=false
@@ -45,7 +47,9 @@ javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=false
 javac.modulepath=\
-    ${file.reference.json-simple-1.1.1.jar}
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
