--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,8 +36,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ArtificialIntelligence
 endorsed.classpath=
 excludes=
-file.reference.jcommon-1.0.23.jar=/home/zachs/Develop/Java/libs/jfreechart-1.0.19/jfreechart-1.0.19/lib/jcommon-1.0.23.jar
-file.reference.jfreechart-1.0.19.jar=/home/zachs/Develop/Java/libs/jfreechart-1.0.19/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar
+file.reference.gson-2.8.6.jar=/home/zachs/Develop/Java/libs/gson/gson-2.8.6.jar
+file.reference.jcommon-1.0.23.jar=/home/zachs/Develop/Java/libs/jfreechart-1.0.19/jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=/home/zachs/Develop/Java/libs/jfreechart-1.0.19/jfreechart-1.0.19.jar
+file.reference.jocl-2.0.2-javadoc.jar=/home/zachs/Develop/Java/libs/jocl/jocl-2.0.2-javadoc.jar
+file.reference.jocl-2.0.2-sources.jar=/home/zachs/Develop/Java/libs/jocl/jocl-2.0.2-sources.jar
+file.reference.jocl-2.0.2.jar=/home/zachs/Develop/Java/libs/jocl/jocl-2.0.2.jar
 file.reference.json-simple-1.1.1.jar=/home/zachs/Develop/Java/libs/json-simple/json-simple-1.1.1.jar
 includes=**
 jar.compress=false
@@ -47,14 +51,18 @@ javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=false
 javac.modulepath=\
-    ${file.reference.json-simple-1.1.1.jar}:\
     ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.gson-2.8.6.jar}:\
+    ${file.reference.jocl-2.0.2-javadoc.jar}:\
+    ${file.reference.jocl-2.0.2.jar}:\
+    ${file.reference.jocl-2.0.2-sources.jar}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=13
-javac.target=13
+javac.source=9
+javac.target=9
 javac.test.classpath=\
     ${javac.classpath}
 javac.test.modulepath=\
@@ -80,7 +88,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ArtificialIntelligence
-platform.active=default_platform
+platform.active=Open_JDK_9
 run.classpath=
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
