--- a/src/convolution/pom.xml
+++ b/src/convolution/pom.xml
@@ -76,5 +76,17 @@
             <version>5.7.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com</groupId>
+            <artifactId>jai.utils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com</groupId>
+            <artifactId>jai.machine_learning</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
