--- a/src/convolution/pom.xml
+++ b/src/convolution/pom.xml
@@ -88,5 +88,11 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com</groupId>
+            <artifactId>jai.core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
