--- a/src/test/pom.xml
+++ b/src/test/pom.xml
@@ -7,6 +7,16 @@
     <groupId>com</groupId>
     <artifactId>jai.test</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <native.maven.plugin.version>0.9.12</native.maven.plugin.version>
+        <imageName>agent</imageName>
+        <mainClass>rover.RoverProblemExecution</mainClass>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.landscraper</groupId>
@@ -62,11 +72,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
 </project>
